overflow and box-sezeng fixed

--- a/src/less/blocks/news-item.less
+++ b/src/less/blocks/news-item.less
@@ -4,7 +4,7 @@
     position: relative;
 
     &:hover .news-item__text {
-      max-height: calc(300px - 2em);
+      max-height: 300px;
       height: 100%;
     }
   }
@@ -23,7 +23,7 @@
     position: absolute;
     display: flex;
     align-items: center;
-    max-width: calc(350px - 1em);
+    max-width: 350px;
     width: 100%;
     max-height: 90px;
     height: 100%;
@@ -43,7 +43,7 @@
     transition: 0.3s ease;
 
     @media (max-width: @mobile) {
-      max-width: calc(320px - 1em);
+      max-width: 320px;
     }
   }
 }
