--- a/src/less/blocks/news-list.less
+++ b/src/less/blocks/news-list.less
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
   gap: 30px;
 }
