--- a/src/less/blocks/news.less
+++ b/src/less/blocks/news.less
@@ -4,4 +4,8 @@
   padding: 0 20px;
   padding-bottom: 100px;
   margin: 0 auto;
+
+  @media (max-width: @touch) {
+    padding: 0;
+  }
 }
