--- a/src/less/common/document.less
+++ b/src/less/common/document.less
@@ -1,3 +1,9 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 .document {
   height: 100%;
   overflow-x: hidden;
