--- a/src/less/common/page.less
+++ b/src/less/common/page.less
@@ -2,6 +2,7 @@
   display: flex;
   margin: 0;
   min-height: 100%;
+  overflow-x: hidden;
   flex-direction: column;
 
   font-family: "Poppins", "Arial", sans-serif;
